src/components/Dropdown/styles.module.scss
@import "/styles/variables.scss";

.container {
  position: relative;
  display: inline-block;
  width: 100%;
  height: 100%;
}

.selected,
.options {
  height: fit-content;
  border-radius: 20px;
  border: 1px solid var(--accent-type-color);
  background-color: var(--accent-color);
  color: var(--accent-type-color);
}

.selected {
  width: 100%;
  height: 100%;
  cursor: pointer;
  @media (hover: hover) and (pointer: fine) {
    &:hover {
      border: 1px solid var(--accent-color);
      background-color: var(--accent-type-color);
      color: var(--accent-color);
    }
  }
}

.options {
  list-style-type: none;
  width: 100%;
  z-index: 1;
  position: absolute;
}

.option {
  padding-left: 0;
  padding: 7px 0;
  cursor: pointer;
  position: relative;

  button {
    width: 100%;
    height: 100%;
    background: none;
    border: none;
    cursor: pointer;
  }
}

.icon,
.chevron,
.iconTop {
  position: absolute;
  pointer-events: none;
}

// Icons have different visual balance so they need different positioning
.icon {
  left: 10px;
  top: 8px;
  @media (min-width: $breakpoint-tablet) {
    left: 11px;
    top: 8px;
  }
  @media (min-width: $breakpoint-desktop) {
    left: 11px;
    top: 10px;
  }
}

.iconTop {
  left: 10px;
  top: 8px;

  @media (min-width: $breakpoint-laptop) {
    left: 11px;
    top: 10px;
  }
}

.chevron {
  right: 10px;
  top: 12px;
  @media (min-width: $breakpoint-tablet) {
    right: 12px;
    top: 14px;
  }
  @media (min-width: $breakpoint-desktop) {
    right: 12px;
    top: 16px;
  }
}

// Only apply hover styles on devices with true hover capability (not touch devices)
@media (hover: hover) and (pointer: fine) {
  li[aria-selected="false"]:hover .icon {
    svg {
      background: var(--accent-type-color);
      border-radius: 2rem;
    }
  }
}

button.chevron {
  pointer-events: all;
  padding: 2px;
  right: 0;
  top: 0;
  padding-right: 10px;
  padding-top: 12px;
}

.selected > span,
.option > button > span {
  text-align: left;
  padding-left: 44px;
  padding-right: 10px;
  display: inline-block;
  width: 100%;
}

